--- a/crypto/common/Cargo.toml
+++ b/crypto/common/Cargo.toml
@@ -6,3 +6,6 @@ edition="2021"
 [dependencies]
 codec     ={ package="parity-scale-codec", version="3.0.0", default-features=false }
 scale-info={ version='2.0.1', default-features=false, features=['derive'] }
+serde     ={ version="1.0", features=["derive"] }
+uuid      ={ version = "1.1.2", features = ["serde", "v4"] }
+anyhow    ="1.0.53"
