--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,17 @@
 [profile.release]
-panic = 'unwind'
+panic='unwind'
 
 [workspace]
-members = [
-    'crypto/centralized-keygen',
-    'crypto/signing-client',
-    'crypto/c-manager',
-    'crypto/testing-utils',
-    'node/*',
-    'pallets/*',
-    'runtime',
-	# 'alice-send',
-    # 'subxttest'
+members=[
+  'crypto/centralized-keygen',
+  'crypto/signing-client',
+  'crypto/c-manager',
+  'crypto/shared-crypto',
+  'crypto/shared-types',
+  'crypto/testing-utils',
+  'node/*',
+  'pallets/*',
+  'runtime',
+  # 'alice-send',
+  # 'subxttest'
 ]
