--- a/crypto/shared-types/Cargo.toml
+++ b/crypto/shared-types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name   ="common"
+name   ="shared-types"
 version="0.1.0"
 edition="2021"
 
@@ -7,5 +7,3 @@ edition="2021"
 codec     ={ package="parity-scale-codec", version="3.0.0", default-features=false }
 scale-info={ version='2.0.1', default-features=false, features=['derive'] }
 serde     ={ version="1.0", features=["derive"] }
-uuid      ={ version = "1.1.2", features = ["serde", "v4"] }
-anyhow    ="1.0.53"
