--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -25,11 +25,11 @@ parity-scale-codec="3.0.0"
 # subxt             ={ git="https://github.com/paritytech/subxt.git" }
 # sp-keyring        ="6.0.0"
 # sp-core           ="6.0.0"
-tofn              ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
+tofn={ git="https://github.com/Entropyxyz/tofn", branch="main" }
 
 # Entropy
-common     ={ path="../common", default-features=false }
-kvdb       ={ path="../kvdb", default-features=false }
+shared-crypto={ path="../shared-crypto", default-features=false }
+kvdb         ={ path="../kvdb", default-features=false }
 # constraints={ path="../constraints" }
 
 # Logging
@@ -38,7 +38,7 @@ tracing           ="0.1"
 tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
 
 # Misc
-uuid        ={ version = "1.1.2", features = ["serde", "v4"] }
+uuid        ={ version="1.1.2", features=["serde", "v4"] }
 tylift      ="0.3.5"
 envy        ="0.4"
 bip39       ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
