--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -1,93 +1,92 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-description = 'FRAME pallet template for defining custom runtime logic.'
-edition = '2021'
-homepage = 'https://substrate.dev'
-license = 'Unlicense'
-name = 'pallet-propagation'
-publish = false
-readme = 'README.md'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
-version = '3.0.0-monthly-2021-10'
+authors    =['Substrate DevHub <https://github.com/substrate-developer-hub>']
+description='FRAME pallet template for defining custom runtime logic.'
+edition    ='2021'
+homepage   ='https://substrate.dev'
+license    ='Unlicense'
+name       ='pallet-propagation'
+publish    =false
+readme     ='README.md'
+repository ='https://github.com/substrate-developer-hub/substrate-node-template/'
+version    ='3.0.0-monthly-2021-10'
 
 [package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
+targets=['x86_64-unknown-linux-gnu']
 
 [dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '3.0.0'
+default-features=false
+features        =['derive']
+package         ='parity-scale-codec'
+version         ='3.0.0'
 
 [dependencies.frame-benchmarking]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-optional = true
-version = '4.0.0-dev'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+optional        =true
+version         ='4.0.0-dev'
 
 [dependencies.frame-support]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='4.0.0-dev'
 
 [dependencies.frame-system]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='4.0.0-dev'
 
 [dependencies]
-pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-relayer = { version = "3.0.0", default-features = false, path = "../relayer" }
-pallet-staking-extension = { version = "3.0.0", default-features = false, path = "../staking" }
-helpers = { path = "../helpers", default-features = false }
+pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-relayer          ={ version="3.0.0", default-features=false, path="../relayer" }
+pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
+helpers                 ={ path="../helpers", default-features=false }
 
-scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
-log = { version = "0.4.0", default-features = false }
-sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-io = { version = "6.0.0", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
-lite-json = { version = "0.1", default-features = false }
-sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { version = "6.0.0", default-features = false,  git = "https://github.com/paritytech/substrate", branch = "master" }
-common = { path = "../../crypto/common", default-features = false }
-sp-application-crypto = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-
-
+scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
+log                  ={ version="0.4.0", default-features=false }
+sp-staking           ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-io                ={ version="6.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="master" }
+lite-json            ={ version="0.1", default-features=false }
+sp-runtime           ={ version="6.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="master" }
+sp-core              ={ version="6.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="master" }
+shared-crypto        ={ path="../../crypto/shared-crypto", default-features=false }
+shared-types         ={ path="../../crypto/shared-types", default-features=false }
+sp-application-crypto={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 
 [dev-dependencies]
-sp-keystore = { version = "0.12.0", git = "https://github.com/paritytech/substrate", branch = "master" }
-parking_lot = "0.11.2"
-pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-babe = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-keystore                    ={ version="0.12.0", git="https://github.com/paritytech/substrate", branch="master" }
+parking_lot                    ="0.11.2"
+pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-babe                    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 
 [features]
-default = ['std']
-runtime-benchmarks = ['frame-benchmarking']
-std = [
-    'codec/std',
-	'log/std',
-	"scale-info/std",
-    'frame-support/std',
-    'frame-system/std',
-    'frame-benchmarking/std',
-	'pallet-authorship/std',
-	'pallet-staking-extension/std',
-	'pallet-balances/std',
-	'pallet-babe/std',
-	'helpers/std',
-	"sp-io/std",
-	"sp-runtime/std",
-	"sp-npos-elections/std",
-	"sp-application-crypto/std",
+default=['std']
+runtime-benchmarks=['frame-benchmarking']
+std=[
+  'codec/std',
+  'log/std',
+  "scale-info/std",
+  'frame-support/std',
+  'frame-system/std',
+  'frame-benchmarking/std',
+  'pallet-authorship/std',
+  'pallet-staking-extension/std',
+  'pallet-balances/std',
+  'pallet-babe/std',
+  'helpers/std',
+  "sp-io/std",
+  "sp-runtime/std",
+  "sp-npos-elections/std",
+  "sp-application-crypto/std",
 ]
-try-runtime = ['frame-support/try-runtime']
+try-runtime=['frame-support/try-runtime']
