--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -1,102 +1,102 @@
 [package]
-name = 'pallet-relayer'
-version = '3.0.0'
-description = 'FRAME pallet template for defining custom runtime logic.'
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-homepage = 'https://substrate.dev'
-edition = '2021'
-license = 'Unlicense'
-publish = false
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+name       ='pallet-relayer'
+version    ='3.0.0'
+description='FRAME pallet template for defining custom runtime logic.'
+authors    =['Substrate DevHub <https://github.com/substrate-developer-hub>']
+homepage   ='https://substrate.dev'
+edition    ='2021'
+license    ='Unlicense'
+publish    =false
+repository ='https://github.com/substrate-developer-hub/substrate-node-template/'
 
 [package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
+targets=['x86_64-unknown-linux-gnu']
 
 [dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '3.0.0'
+default-features=false
+features        =['derive']
+package         ='parity-scale-codec'
+version         ='3.0.0'
 
 [dependencies.frame-benchmarking]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-optional = true
-version = '4.0.0-dev'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+optional        =true
+version         ='4.0.0-dev'
 
 [dependencies.frame-support]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='4.0.0-dev'
 
 [dependencies.frame-system]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='4.0.0-dev'
 
 [dependencies.scale-info]
-default-features = false
-features = ['derive']
-version = '2.0.1'
+default-features=false
+features        =['derive']
+version         ='2.0.1'
 
 [dev-dependencies.sp-core]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '6.0.0'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='6.0.0'
 
 [dev-dependencies.sp-io]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '6.0.0'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='6.0.0'
 
 [dependencies.sp-runtime]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '6.0.0'
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ='6.0.0'
 
 [dependencies]
-sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-log = { version = "0.4.0", default-features = false }
-pallet-slashing = { version = "3.0.0", default-features = false, path = "../slashing" }
-pallet-staking-extension = { version = "3.0.0", default-features = false, path = "../staking" }
-common = { path = "../../crypto/common", default-features = false }
-helpers = { path = "../helpers", default-features = false }
+sp-std                  ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="master", default-features=false }
+pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+log                     ={ version="0.4.0", default-features=false }
+pallet-slashing         ={ version="3.0.0", default-features=false, path="../slashing" }
+pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
+shared-crypto           ={ path="../../crypto/shared-crypto", default-features=false }
+shared-types            ={ path="../../crypto/shared-types", default-features=false }
+helpers                 ={ path="../helpers", default-features=false }
 
 [dev-dependencies]
-pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-
+pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 
 [features]
-default = ['std']
-runtime-benchmarks = ['frame-benchmarking']
-std = [
-    'codec/std',
-	'log/std',
-    'scale-info/std',
-    'frame-support/std',
-    'frame-system/std',
-    'frame-benchmarking/std',
-	'pallet-balances/std',
-	'pallet-slashing/std',
-	'pallet-staking-extension/std',
-	'helpers/std',
-	"sp-std/std",
-	"sp-runtime/std",
-	"sp-npos-elections/std",
+default=['std']
+runtime-benchmarks=['frame-benchmarking']
+std=[
+  'codec/std',
+  'log/std',
+  'scale-info/std',
+  'frame-support/std',
+  'frame-system/std',
+  'frame-benchmarking/std',
+  'pallet-balances/std',
+  'pallet-slashing/std',
+  'pallet-staking-extension/std',
+  'helpers/std',
+  "sp-std/std",
+  "sp-runtime/std",
+  "sp-npos-elections/std",
 ]
-try-runtime = ['frame-support/try-runtime']
+try-runtime=['frame-support/try-runtime']
