fix: refactor substrate<>client types; fix master (#155)
* fix: refactor substrate<>client types; fix master

* fix: `go fmt && cargo clippy && taplo fmt` in crypto dirs

* simplify workspace members

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [profile.release]
-panic = 'unwind'
+panic='unwind'
 
 [workspace]
-members = [
-    'crypto/centralized-keygen',
-    'crypto/signing-client',
-    'crypto/c-manager',
-    'crypto/testing-utils',
-    'node/*',
-    'pallets/*',
-    'runtime',
-	# 'alice-send',
-    # 'subxttest'
+members=[
+  'crypto/*',
+  'node/*',
+  'pallets/*',
+  'runtime',
+  # 'alice-send',
+  # 'subxttest'
 ]
