--- a/subxttest/Cargo.toml
+++ b/subxttest/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
-name = "subxt_test"
-version = "0.1.0"
-edition = "2018"
+name   ="subxt_test"
+version="0.1.0"
+edition="2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-subxt = { git = "https://github.com/paritytech/subxt.git" }
-sp-keyring = "6.0.0"
-async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
+subxt={ git="https://github.com/paritytech/subxt.git" }
+sp-keyring="6.0.0"
+async-std={ version="1.9.0", features=["attributes", "tokio1"] }
+codec={ package="parity-scale-codec", version="3.0.0", default-features=false, features=[
+  "derive",
+  "full",
+  "bit-vec",
+] }
