--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -1,85 +1,84 @@
 [package]
-name = 'pallet-staking-extension'
-version = '3.0.0'
-description = 'FRAME pallet template for defining custom runtime logic.'
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-homepage = 'https://substrate.dev'
-edition = '2018'
-license = 'AGPL-3.0-or-later'
-publish = false
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+name       ='pallet-staking-extension'
+version    ='3.0.0'
+description='FRAME pallet template for defining custom runtime logic.'
+authors    =['Substrate DevHub <https://github.com/substrate-developer-hub>']
+homepage   ='https://substrate.dev'
+edition    ='2018'
+license    ='AGPL-3.0-or-later'
+publish    =false
+repository ='https://github.com/substrate-developer-hub/substrate-node-template/'
 
 [package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
+targets=['x86_64-unknown-linux-gnu']
 
 [dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '3.0.0'
+default-features=false
+features        =['derive']
+package         ='parity-scale-codec'
+version         ='3.0.0'
 
 [dependencies.frame-benchmarking]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-optional = true
-branch = "master"
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+optional        =true
+branch          ="master"
 
 [dependencies.frame-support]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
 
 [dependencies.frame-system]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
 
 [dependencies.scale-info]
-default-features = false
-features = ['derive']
-version = '2.0.1'
+default-features=false
+features        =['derive']
+version         ='2.0.1'
 
 [dev-dependencies.sp-core]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = "6.0.0"
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ="6.0.0"
 
 [dev-dependencies.sp-io]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = "6.0.0"
-
+default-features=false
+git             ='https://github.com/paritytech/substrate.git'
+branch          ="master"
+version         ="6.0.0"
 
 [dependencies]
-pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+pallet-staking={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-runtime    ={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="master", default-features=false }
 
 [dev-dependencies]
-pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 
 [features]
-default = ['std']
-runtime-benchmarks = ['frame-benchmarking']
-std = [
-    'codec/std',
-    'scale-info/std',
-    'frame-support/std',
-    'frame-system/std',
-	'sp-runtime/std',
-	"sp-std/std",
-	'pallet-staking/std',
-	'pallet-balances/std',
-    'frame-benchmarking/std',
-	"sp-npos-elections/std",
+default=['std']
+runtime-benchmarks=['frame-benchmarking']
+std=[
+  'codec/std',
+  'scale-info/std',
+  'frame-support/std',
+  'frame-system/std',
+  'sp-runtime/std',
+  "sp-std/std",
+  'pallet-staking/std',
+  'pallet-balances/std',
+  'frame-benchmarking/std',
+  "sp-npos-elections/std",
 ]
-try-runtime = ['frame-support/try-runtime']
+try-runtime=['frame-support/try-runtime']
