--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -12,6 +12,9 @@ parameters:
   pallets:
     type: boolean
     default: false
+  runtime:
+    type: boolean
+    default: false
 
 commands:
   install-dependencies-and-checkout:
@@ -41,7 +44,7 @@ commands:
 workflows:
   node:
     when: 
-      or: [ << pipeline.parameters.node >>, << pipeline.parameters.pallets >> ]
+      or: [ << pipeline.parameters.node >>, << pipeline.parameters.pallets >>, << pipeline.parameters.runtime >> ]
     jobs: 
       - node-test
       - node-benchmark
