--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ workflows:
             node/.* node true
             crypto/.* crypto true
             pallets/.* pallets true
+            runtime/.* runtime true
           base-revision: master
           # path to trigger once filtering/value updates finish 
           config-path: .circleci/then.yml
