Ci: add runtime, pallets to conditional checks on node CI (#159)
* support pallets

* runtime

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ workflows:
           mapping: |
             node/.* node true
             crypto/.* crypto true
+            pallets/.* pallets true
+            runtime/.* runtime true
           base-revision: master
           # path to trigger once filtering/value updates finish 
           config-path: .circleci/then.yml
