--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -28,8 +28,8 @@ parity-scale-codec="3.0.0"
 tofn={ git="https://github.com/Entropyxyz/tofn", branch="main" }
 
 # Entropy
-shared-crypto={ path="../shared-crypto", default-features=false }
-kvdb         ={ path="../kvdb", default-features=false }
+non-substrate-common={ path="../non-substrate-common", default-features=false }
+kvdb                ={ path="../kvdb", default-features=false }
 # constraints={ path="../constraints" }
 
 # Logging
