update Communication manager, split into signing-client and communication-manager, and document in README (#161)
* docs, cruft, SigningMessageError, Global -> SignerState, init->api

* reduce main cruft

* update todos

* update cm main

* add db back in

* doc comment

* move store_share

* unbreak tests

* respec get_ip -> sign_request

* clean 'sign'

* renamings and CI

* readme

* format all

* shared-types/common renamed in pallets

* fmt all

* readme

* silence warnings

* fmt

* taplo fmt toplevel

* format node

* format pallets

* merge signing-client and cm

* format all

* clean api up

* lint: cargo toml offchain-server -> server

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -47,6 +47,14 @@ commands:
       - run: cargo clippy -- -D warnings
 
 workflows:
+  crypto:
+    when: << pipeline.parameters.crypto >>
+    jobs:
+      - crypto-centralized-keygen
+      - crypto-server
+      - crypto-kvdb
+      - crypto-non-substrate-common
+      - crypto-substrate-common
   node:
     when: 
       or: [ << pipeline.parameters.node >>, << pipeline.parameters.pallets >>, << pipeline.parameters.runtime >> ]
@@ -54,14 +62,6 @@ workflows:
       - node-test
       - node-benchmark
       - node-lint-core
-  crypto:
-    when: << pipeline.parameters.crypto >>
-    jobs:
-      - crypto-signing-client
-      - crypto-centralized-keygen
-      - crypto-kvdb
-      - crypto-common
-      - types-common
 
 jobs: 
   crypto-centralized-keygen:
@@ -70,27 +70,15 @@ jobs:
       resource_class: "xlarge"
     steps:
       - install-dependencies-and-checkout
+      - run: cd crypto/centralized-keygen
       - fmt-lint
-  crypto-signing-client:
+  crypto-server:
     machine:
       image: "ubuntu-2004:202201-02"
       resource_class: "xlarge"
     steps:
       - install-dependencies-and-checkout
-      - fmt-lint
-  crypto-common:
-    machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
-    steps:
-      - install-dependencies-and-checkout
-      - fmt-lint
-  types-common:
-    machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
-    steps:
-      - install-dependencies-and-checkout
+      - run: cd crypto/server
       - fmt-lint
   crypto-kvdb:
     machine:
@@ -98,6 +86,23 @@ jobs:
       resource_class: "xlarge"
     steps:
       - install-dependencies-and-checkout
+      - run: cd crypto/kvdb 
+      - fmt-lint
+  crypto-non-substrate-common:
+    machine:
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
+    steps:
+      - install-dependencies-and-checkout
+      - run: cd crypto/non-substrate-common
+      - fmt-lint
+  crypto-substrate-common:
+    machine:
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
+    steps:
+      - install-dependencies-and-checkout
+      - run: cd crypto/substrate-common
       - fmt-lint
   node-test:
     machine:
