all to 2xlarge see if this fixed ci

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -67,7 +67,7 @@ jobs:
   crypto-centralized-keygen:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/centralized-keygen
@@ -75,7 +75,7 @@ jobs:
   crypto-server:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/server
@@ -83,7 +83,7 @@ jobs:
   crypto-kvdb:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/kvdb 
@@ -107,7 +107,7 @@ jobs:
   node-test:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
+      resource_class: "2xlarge"
     steps:
       - increase-swap
       - install-dependencies-and-checkout
@@ -117,14 +117,14 @@ jobs:
   node-benchmark:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: pushd node && cargo check --features=runtime-benchmarks --release
   node-lint-core:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "xlarge"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: SKIP_WASM_BUILD=1 cargo clippy
