--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -11,6 +11,7 @@ frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="mast
 frame-support     ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
 frame-system      ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
 sp-std            ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
+log                  ={ version="0.4.0", default-features=false }
 
 [dev-dependencies]
 sp-core        ={ git="https://github.com/paritytech/substrate", branch="master" }
@@ -31,5 +32,6 @@ std=[
   "frame-support/std",
   "frame-system/std",
   "pallet-balances/std",
+  "log/std",
 ]
 try-runtime=["frame-support/try-runtime"]
